--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,13 @@ host: http://colinta.com
 meta:
   analytics: 'UA-15076738-1'
   title: stuff by colinta
+  header: colinta
   # time: {{ Date() }}
   author:
     name: Colin Thomas-Arnold
     email: colinta@gmail.com
     github: colinta
     twitter: colinta
+extensions:
+  - extensions/markdown2_extension.py
+  - extensions/date_extension.py
