--- a/site/static/image/2012-01-06 Ouray/config.yaml
+++ b/site/static/image/2012-01-06 Ouray/config.yaml
@@ -1,10 +1,10 @@
 files:
   "img_0224.jpg":
     target_name: "img_0224.jpg"
-    caption: ""
+    caption: "Walking in the ravine with my cool toys."
   "img_0225.jpg":
     target_name: "img_0225.jpg"
-    caption: ""
+    caption: "More of that."
   "img_0226.jpg":
     target_name: "img_0226.jpg"
     caption: ""
